# agent-skills

./: .curator_state  .gitignore  .last-sync  .usage.json
.github/workflows/: smoke-tests.yml
.jules/: sentinel.md
autonomous-ai-agents/hermes-agent/: SKILL.md
content/news-digest/: SKILL.md
creative/manim-video/: SKILL.md
data/: seen_listings.json
devops/cron-job-delivery/: SKILL.md
devops/data-persistence-pattern/: SKILL.md
devops/hermes-upgrade-procedure/: SKILL.md
github/github/: SKILL.md
github/github-auto-merge-workflow/: SKILL.md
github/github-code-review/: SKILL.md
github/github-issues/: SKILL.md
github/nightly-upstream-sync/: SKILL.md
investigate-npm-package-usage/: SKILL.md
manual-digest-when-api-unavailable/: SKILL.md
media/personal-classifiers/: SKILL.md
media/process-youtube-backlog/: SKILL.md
media/waytoagi-reader/: SKILL.md
media/wsj-reader/: .env.sample  AGENTS.md  GEMINI.md  README.md  SKILL.md  pyproject.toml
media/wsj-reader/schemas/: article.schema.json  audio.schema.json  headlines.schema.json
media/wsj-reader/scripts/: set_cookie.py
media/wsj-reader/src/wsj_reader/: __init__.py  _next_data.py  article.py  audio.py  cache.py  cli.py  client.py  headlines.py
media/wsj-reader/tests/: conftest.py  test_agent_entrypoints.py  test_article.py  test_audio.py  test_cache.py  test_client.py  test_contract.py  test_headlines.py  test_set_cookie.py
media/wsj-reader/tests/fixtures/: article_page.html  print_edition.html  read_to_me.json
media/youtube-backlog-processor/: SKILL.md
media/youtube-content/: SKILL.md
(+146 files in other folders)
