[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsj-reader"
version = "0.1.0"
description = "Read Wall Street Journal print-edition headlines, articles, and narrated MP3s using the user's authenticated session. JSON output for agent consumption."
license = {text = "Apache-2.0"}
authors = [{name = "Nick Lange"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "news-reader-base @ file:../news-reader-base",
]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.24"]

[project.scripts]
wsj = "wsj_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
